--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,8 +14,9 @@
 }
 
 body {
-  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
   background-color: #eef0f1;
@@ -284,10 +285,10 @@ a {
   color: #888;
 }
 
-.form input[type="text"],
-.form input[type="email"],
-.form input[type="password"],
-.form input[type="date"],
+.form input[type='text'],
+.form input[type='email'],
+.form input[type='password'],
+.form input[type='date'],
 .form select,
 .form textarea {
   display: block;
@@ -297,7 +298,7 @@ a {
   border: 1px solid #ddd;
 }
 
-.form input[type="submit"],
+.form input[type='submit'],
 button {
   font: inherit;
 }
@@ -305,9 +306,9 @@ button {
   transition: all 0.1s ease-in-out;
   outline: none;
 }
-input[type="text"],
-input[type="email"],
-input[type="password"] {
+input[type='text'],
+input[type='email'],
+input[type='password'] {
   transition: all 0.1s ease-in-out;
   outline: none;
   padding: 3px 0px 3px 3px;
@@ -319,9 +320,9 @@ input[type="password"] {
   border-right: 2px solid royalblue;
   border-bottom: 2px solid royalblue;
 }
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="password"]:focus {
+input[type='text']:focus,
+input[type='email']:focus,
+input[type='password']:focus {
   border-top: 1px solid royalblue;
   border-left: 1px solid royalblue;
   border-right: 2px solid royalblue;
@@ -509,11 +510,11 @@ input[type="password"]:focus {
 
   .profile-grid {
     grid-template-areas:
-      "top"
-      "about"
-      "exp"
-      "edu"
-      "github";
+      'top'
+      'about'
+      'exp'
+      'edu'
+      'github';
   }
 
   .profile-about .skills {
@@ -673,7 +674,7 @@ input[type="password"]:focus {
 }
 .post-feed,
 .guest-welcome,
-.discuss-side {
+.post-side {
   box-shadow: rgba(8, 9, 10, 0.1) 0px 0px 0px 1px;
   border: unset;
   border-radius: 5px;
@@ -710,6 +711,7 @@ input[type="password"]:focus {
   opacity: 0.8;
 }
 
+/* hover nav */
 .action-feed {
   z-index: 10;
   position: absolute;
@@ -805,7 +807,6 @@ li:hover .action-feed_s {
   padding: 20px;
   border: 1px solid rgba(8, 9, 10, 0.1);
   display: grid;
-  /* grid-template-columns: 1fr 4fr; */
   margin-bottom: 20px;
   border-radius: 5px;
   word-break: break-word;
@@ -960,7 +961,7 @@ notfound {
 }
 
 .notfound .notfound-404 h1 {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -981,7 +982,7 @@ notfound {
 }
 
 .notfound .notfound-404 h3 {
-  font-family: "Cabin", sans-serif;
+  font-family: 'Cabin', sans-serif;
   position: relative;
   font-size: 16px;
   font-weight: 700;
@@ -993,7 +994,7 @@ notfound {
 }
 
 .notfound h2 {
-  font-family: "Cabin", sans-serif;
+  font-family: 'Cabin', sans-serif;
   font-size: 20px;
   font-weight: 400;
   text-transform: uppercase;
@@ -1316,12 +1317,36 @@ div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
   word-break: break-word;
   padding: 50px 25px;
 }
-/* discuss side */
-.discuss-side {
+/* post side */
+.post-side {
   background-color: #f9fafa;
 }
-.discuss-side__wrap {
-  height: 200px;
+.post-side__content .post-side__item:last-child {
+  border-bottom: unset;
 }
-.discuss-side__title {
+.post-side__wrap {
+  height: auto;
+}
+.post-side__title {
+  display: block;
+  font-weight: 600;
+  border-bottom: 1px solid #eee;
+}
+.post-side__title:hover span {
+  color: royalblue;
+}
+.post-side__item-comt {
+  font-size: 0.85rem;
+  color: #64707d;
+}
+.post-side__item {
+  display: block;
+  word-break: break-word;
+  border-bottom: 1px solid #eee;
+}
+.post-side__item:hover {
+  background-color: #fff;
+}
+.post-side__item:hover .post-side__item-title {
+  color: royalblue;
 }
