--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,10 @@
 /* Global Styles */
 :root {
+  --mainstream-color: royalblue;
   --primary-color: #17a2b8;
   --dark-color: #363c44;
   --light-color: #f6f6f6;
+  --white-color: #fff;
   --danger-color: #dc3545;
   --success-color: #28a745;
 }
@@ -39,7 +41,6 @@ a {
 .x-large {
   font-size: 4rem;
   line-height: 1.2;
-  /* margin-bottom: 1rem; */
 }
 
 .large {
@@ -145,7 +146,7 @@ a {
 .btn {
   display: inline-block;
   background: var(--light-color);
-  color: #333;
+  color: var(--dark-color);
   padding: 0.4rem 1.3rem;
   font-size: 1rem;
   border: none;
@@ -153,23 +154,6 @@ a {
   margin-right: 0.5rem;
   transition: opacity 0.2s ease-in;
   outline: none;
-}
-
-.badge {
-  font-size: 0.8rem;
-  padding: 0.1rem;
-  text-align: center;
-  margin: 0.3rem;
-  background: var(--light-color);
-  color: #333;
-}
-
-.alert {
-  padding: 0.8rem;
-  margin: 1rem 0;
-  opacity: 0.9;
-  background: var(--light-color);
-  color: #333;
 }
 .btn-dark,
 .btn-white,
@@ -185,7 +169,7 @@ a {
 .badge-primary,
 .alert-primary {
   background: var(--primary-color);
-  color: #fff;
+  color: var(--white-color);
 }
 
 .btn-light,
@@ -193,7 +177,11 @@ a {
 .badge-light,
 .alert-light {
   background: var(--light-color);
-  color: #333;
+  color: var(--dark-color);
+}
+.btn-blue {
+  background: var(--mainstream-color);
+  color: var(--white-color);
 }
 
 .btn-dark,
@@ -201,7 +189,7 @@ a {
 .badge-dark,
 .alert-dark {
   background: var(--dark-color);
-  color: #fff;
+  color: var(--white-color);
 }
 
 .btn-danger,
@@ -209,7 +197,7 @@ a {
 .badge-danger,
 .alert-danger {
   background: var(--danger-color);
-  color: #fff;
+  color: var(--white-color);
 }
 
 .btn-success,
@@ -217,15 +205,15 @@ a {
 .badge-success,
 .alert-success {
   background: var(--success-color);
-  color: #fff;
+  color: var(--white-color);
 }
 
 .btn-white,
 .bg-white,
 .badge-white,
 .alert-white {
-  background: #fff;
-  color: #333;
+  background: var(--white-color);
+  color: var(--dark-color);
   border: #ccc solid 1px;
 }
 
@@ -233,10 +221,6 @@ a {
   opacity: 0.8;
 }
 
-.bg-light,
-.badge-light {
-  border: #ccc solid 1px;
-}
 .round-img,
 .round-img-dashboard,
 .round-img-feed {
@@ -263,16 +247,6 @@ a {
   margin: 1.5rem 0;
 }
 
-/* Overlay */
-.dark-overlay {
-  background-color: rgba(0, 0, 0, 0.7);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
 /* Forms */
 .form .form-group {
   margin: 1.2rem 0;
@@ -281,7 +255,7 @@ a {
 .form .form-text {
   display: block;
   margin-top: 0.3rem;
-  color: #888;
+  color: var(--dark-color);
 }
 
 .form input[type="text"],
@@ -314,18 +288,18 @@ input[type="password"] {
   margin: 5px 1px 3px 0px;
 }
 .form textarea:focus {
-  border-top: 1px solid royalblue;
-  border-left: 1px solid royalblue;
-  border-right: 2px solid royalblue;
-  border-bottom: 2px solid royalblue;
+  border-top: 1px solid var(--mainstream-color);
+  border-left: 1px solid var(--mainstream-color);
+  border-right: 2px solid var(--mainstream-color);
+  border-bottom: 2px solid var(--mainstream-color);
 }
 input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="password"]:focus {
-  border-top: 1px solid royalblue;
-  border-left: 1px solid royalblue;
-  border-right: 2px solid royalblue;
-  border-bottom: 2px solid royalblue;
+  border-top: 1px solid var(--mainstream-color);
+  border-left: 1px solid var(--mainstream-color);
+  border-right: 2px solid var(--mainstream-color);
+  border-bottom: 2px solid var(--mainstream-color);
 }
 
 .form .social-input {
@@ -353,16 +327,6 @@ input[type="password"]:focus {
   color: #0077b5;
 }
 
-.table th,
-.table td {
-  padding: 1rem;
-  text-align: left;
-}
-
-.table th {
-  background: var(--light-color);
-}
-
 /* Navbar */
 .grid {
   width: 100%;
@@ -375,7 +339,7 @@ input[type="password"]:focus {
   box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.1);
 }
 .wrap-header {
-  background-color: #fff;
+  background-color: var(--white-color);
   height: auto;
 }
 .top-header {
@@ -410,16 +374,10 @@ input[type="password"]:focus {
   align-items: center;
 }
 
-/* Profiles Page */
-
 /* Posts Page */
 .hljs {
   padding: 1.5rem;
   font-size: 1rem;
-}
-.post-form .post-form-header {
-  background: var(--primary-color);
-  padding: 0.5rem;
 }
 
 .post {
@@ -448,7 +406,7 @@ input[type="password"]:focus {
   font-size: 0.8rem;
 }
 /* Mobile Styles */
-@media (max-width: 700px) {
+/* @media (max-width: 700px) {
   .container {
     margin-top: 8rem;
   }
@@ -457,7 +415,7 @@ input[type="password"]:focus {
     display: none;
   }
 
-  /* Text Styles */
+
   .x-large {
     font-size: 3rem;
   }
@@ -470,7 +428,7 @@ input[type="password"]:focus {
     font-size: 1rem;
   }
 
-  /* Navbar */
+
   .navbar {
     display: block;
     text-align: center;
@@ -489,7 +447,7 @@ input[type="password"]:focus {
     display: none;
   }
 
-  /* Profiles Page */
+
   .profile {
     grid-template-columns: 1fr;
     text-align: center;
@@ -499,7 +457,7 @@ input[type="password"]:focus {
     display: none;
   }
 
-  /* Profile Page */
+
 
   .profile-top img,
   .profile img {
@@ -533,7 +491,7 @@ input[type="password"]:focus {
   .post button {
     padding: 0.3rem 0.4rem;
   }
-}
+} */
 
 /* css for many components, -.- */
 /* *back drop login popup,guide,image components */
@@ -554,7 +512,7 @@ input[type="password"]:focus {
   margin: 200px auto;
   box-shadow: 3px 5px 1px 1px var(--dark-color);
   border: 2px solid var(--dark-color);
-  background-color: #fff;
+  background-color: var(--white-color);
   align-items: center;
   justify-content: center;
   border-radius: 5px;
@@ -659,7 +617,6 @@ input[type="password"]:focus {
   font-weight: 400;
   line-height: 1.25em;
 }
-
 .reply-area {
   width: 85%;
   display: flex;
@@ -669,12 +626,17 @@ input[type="password"]:focus {
 .reply-item {
   width: 100%;
 }
-
+.comment-infor h5 {
+  margin: 0;
+}
+.comment-infor img {
+  margin: 0 0.3rem 0 0;
+}
 .comment-infor {
   width: fit-content;
 }
 .comment-infor:hover h5 {
-  color: royalblue;
+  color: var(--mainstream-color);
 }
 .comment-item {
   overflow-x: hidden;
@@ -686,10 +648,9 @@ input[type="password"]:focus {
 .comment-item .round-img {
   height: 40px;
 }
-
 .progress-bar {
   height: 5px;
-  background: #3b49df;
+  background: var(--mainstream-color);
   margin-top: 20px;
 }
 .action-comt.show-reply {
@@ -741,7 +702,7 @@ input[type="password"]:focus {
 }
 
 .title-hover:hover h1 {
-  color: royalblue;
+  color: var(--mainstream-color);
 }
 .btn-hover {
   background-color: unset;
@@ -754,7 +715,7 @@ input[type="password"]:focus {
 
 .btn-nav {
   margin-right: 15px;
-  background-color: royalblue;
+  background-color: var(--mainstream-color);
 }
 .nav-hover:hover a {
   background-color: var(--light-color);
@@ -775,7 +736,7 @@ input[type="password"]:focus {
   border: 2px solid var(--dark-color);
   border-radius: 5px;
   padding: 15px;
-  background-color: #fff;
+  background-color: var(--white-color);
   display: none;
 }
 .avatar-feed:hover .action-feed {
@@ -820,7 +781,7 @@ li:hover .action-feed_s {
 .login-wrap {
   max-width: 600px;
   margin: 1rem auto 1rem;
-  background-color: #fff;
+  background-color: var(--white-color);
   height: 550px;
   box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.1);
   border: unset;
@@ -849,7 +810,7 @@ li:hover .action-feed_s {
   height: 45px;
   border-radius: 50%;
   margin-top: 30px;
-  background-color: #fff;
+  background-color: var(--white-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -869,7 +830,9 @@ li:hover .action-feed_s {
   grid-template-columns: 15rem 1fr;
   gap: 1rem;
 }
-
+.side-setting a:hover {
+  color: var(--mainstream-color);
+}
 .main-setting {
   border: unset;
   border-radius: 5px;
@@ -926,7 +889,7 @@ li:hover .action-feed_s {
   grid-template-columns: 1fr;
 }
 .reading-list:hover a {
-  background-color: #fff;
+  background-color: var(--white-color);
 }
 .action-statis,
 .action-button {
@@ -955,12 +918,12 @@ li:hover .action-feed_s {
   align-items: center;
 }
 .follower-name {
-  color: royalblue;
+  color: var(--mainstream-color);
   font-weight: 600;
   padding: 10px;
 }
 .followers__item-wrap:hover .follower-name.tag {
-  color: royalblue;
+  color: var(--mainstream-color);
 }
 .follower-name.tag {
   color: #64707d;
@@ -1030,7 +993,7 @@ notfound {
 }
 
 .notfound .notfound-404 h1 > span {
-  text-shadow: -8px 0px 0px #fff;
+  text-shadow: -8px 0px 0px var(--white-color);
 }
 
 .notfound .notfound-404 h3 {
@@ -1142,7 +1105,7 @@ notfound {
   color: #64707d;
 }
 .me-meta a:hover i {
-  color: royalblue;
+  color: var(--mainstream-color);
 }
 .me-work {
   font-size: 0.9rem;
@@ -1163,7 +1126,7 @@ notfound {
   color: #64707d;
 }
 .me-work__item:hover a {
-  color: royalblue;
+  color: var(--mainstream-color);
 }
 .action-follow {
   align-self: flex-end;
@@ -1177,7 +1140,7 @@ label #select {
   opacity: 0;
 }
 .cover-image__btn {
-  background-color: #fff;
+  background-color: var(--white-color);
   box-shadow: rgba(8, 9, 10, 0.1) 0px 0px 0px 1px;
 }
 
@@ -1248,10 +1211,10 @@ div.ReactTags__tagInput input.ReactTags__tagInputField:focus {
 
 /* Styles for selected tags */
 div.ReactTags__selected:focus-within {
-  border-top: 1px solid royalblue;
-  border-left: 1px solid royalblue;
-  border-right: 2px solid royalblue;
-  border-bottom: 2px solid royalblue;
+  border-top: 1px solid var(--mainstream-color);
+  border-left: 1px solid var(--mainstream-color);
+  border-right: 2px solid var(--mainstream-color);
+  border-bottom: 2px solid var(--mainstream-color);
 }
 div.ReactTags__selected {
   padding: 10px;
@@ -1263,16 +1226,16 @@ div.ReactTags__selected span {
   word-break: break-word !important;
 }
 div.ReactTags__selected span.ReactTags__tag {
-  background: royalblue;
+  background: var(--mainstream-color);
   font-size: 1rem;
   display: inline-block;
   padding: 5px;
   margin: 5px;
   border-radius: 3px;
-  color: #fff;
+  color: var(--white-color);
 }
 div.ReactTags__selected a.ReactTags__remove {
-  color: #fff;
+  color: var(--white-color);
   font-size: 1.3rem;
   margin-left: 10px;
   cursor: pointer;
@@ -1326,7 +1289,7 @@ div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
 }
 .tag-recommend__link:hover span {
   background-color: #e2e4e6;
-  color: royalblue;
+  color: var(--mainstream-color);
 }
 .tags-dashboard {
   display: grid;
@@ -1341,7 +1304,7 @@ div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
   outline: unset;
 }
 .tag-card__link:hover span {
-  color: royalblue;
+  color: var(--mainstream-color);
 }
 .tag-card__link-name {
   font-size: 1.2rem;
@@ -1364,7 +1327,7 @@ div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
   align-items: center;
   justify-content: center;
   position: relative;
-  background-color: #fff;
+  background-color: var(--white-color);
   border-radius: 5px;
   word-break: break-word;
   padding: 50px 25px;
@@ -1385,7 +1348,7 @@ div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
   border-bottom: 1px solid #eee;
 }
 .post-side__title:hover span {
-  color: royalblue;
+  color: var(--mainstream-color);
 }
 .post-side__item-comt {
   font-size: 0.85rem;
@@ -1397,10 +1360,10 @@ div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
   border-bottom: 1px solid #eee;
 }
 .post-side__item:hover {
-  background-color: #fff;
+  background-color: var(--white-color);
 }
 .post-side__item:hover .post-side__item-title {
-  color: royalblue;
+  color: var(--mainstream-color);
 }
 /* notify */
 .notify-home {
@@ -1408,8 +1371,9 @@ div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
   grid-template-columns: 15rem 1fr;
   gap: 1rem;
 }
-/* .notify-home__side {
-} */
+.notify-home__side a:hover {
+  color: var(--mainstream-color);
+}
 .notify-home__main {
   display: flex;
   flex-direction: column;
@@ -1444,7 +1408,7 @@ div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
   align-items: center;
 }
 .reaction-notify__message a {
-  color: royalblue;
+  color: var(--mainstream-color);
 }
 .notifications-status {
   padding: 0.1rem 0.15rem;
@@ -1462,7 +1426,7 @@ div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
   margin-left: auto;
 }
 .notify-home__main-actions .btn-light {
-  background-color: #fff;
+  background-color: var(--white-color);
 }
 .notify-home__main-actions button {
   margin-right: 0;
