complete search data

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,8 +16,9 @@
 }
 
 body {
-  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
   background-color: #eef0f1;
@@ -161,7 +162,8 @@ a {
 .btn-dark,
 .btn-light,
 .btn-primary,
-.btn-success {
+.btn-success,
+.btn-blue {
   border-radius: 5px;
 }
 .btn-primary,
@@ -258,10 +260,10 @@ a {
   color: var(--dark-color);
 }
 
-.form input[type="text"],
-.form input[type="email"],
-.form input[type="password"],
-.form input[type="date"],
+.form input[type='text'],
+.form input[type='email'],
+.form input[type='password'],
+.form input[type='date'],
 .form select,
 .form textarea {
   display: block;
@@ -271,7 +273,7 @@ a {
   border: 1px solid #ddd;
 }
 
-.form input[type="submit"],
+.form input[type='submit'],
 button {
   font: inherit;
 }
@@ -279,9 +281,9 @@ button {
   transition: all 0.1s ease-in-out;
   outline: none;
 }
-input[type="text"],
-input[type="email"],
-input[type="password"] {
+input[type='text'],
+input[type='email'],
+input[type='password'] {
   transition: all 0.1s ease-in-out;
   outline: none;
   padding: 3px 0px 3px 3px;
@@ -293,9 +295,9 @@ input[type="password"] {
   border-right: 2px solid var(--mainstream-color);
   border-bottom: 2px solid var(--mainstream-color);
 }
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="password"]:focus {
+input[type='text']:focus,
+input[type='email']:focus,
+input[type='password']:focus {
   border-top: 1px solid var(--mainstream-color);
   border-left: 1px solid var(--mainstream-color);
   border-right: 2px solid var(--mainstream-color);
@@ -717,8 +719,24 @@ input[type="password"]:focus {
   margin-right: 15px;
   background-color: var(--mainstream-color);
 }
+.nav-hover a {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+  margin: 0.25rem;
+}
 .nav-hover:hover a {
   background-color: var(--light-color);
+}
+.avatar-feed {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 .avatar-feed:hover img {
   opacity: 0.8;
@@ -848,7 +866,7 @@ li:hover .action-feed_s {
 }
 /* post item  */
 .main-post-item,
-.side-post-item .box {
+.side-post-item .side-post-item__profile {
   box-shadow: rgba(8, 9, 10, 0.1) 0px 0px 0px 1px;
   border: unset;
   border-radius: 5px;
@@ -888,8 +906,15 @@ li:hover .action-feed_s {
 .post-list__item-wrap.reading-list {
   grid-template-columns: 1fr;
 }
-.reading-list:hover a {
-  background-color: var(--white-color);
+.item-infor h3 {
+  font-weight: 500;
+  font-size: 1.2rem;
+  color: var(--mainstream-color);
+}
+.reading-list__head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .action-statis,
 .action-button {
@@ -976,7 +1001,7 @@ notfound {
 }
 
 .notfound .notfound-404 h1 {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -997,7 +1022,7 @@ notfound {
 }
 
 .notfound .notfound-404 h3 {
-  font-family: "Cabin", sans-serif;
+  font-family: 'Cabin', sans-serif;
   position: relative;
   font-size: 16px;
   font-weight: 700;
@@ -1009,7 +1034,7 @@ notfound {
 }
 
 .notfound h2 {
-  font-family: "Cabin", sans-serif;
+  font-family: 'Cabin', sans-serif;
   font-size: 20px;
   font-weight: 400;
   text-transform: uppercase;
@@ -1176,6 +1201,9 @@ label #select {
 }
 .top-feed__filter button:last-child {
   margin-right: 0;
+}
+.top-feed__filter button:hover {
+  color: var(--mainstream-color);
 }
 .top-feed__filter .btn {
   padding: 0.2rem 0.6rem;
@@ -1433,4 +1461,7 @@ div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
   box-shadow: rgba(8, 9, 10, 0.1) 0px 0px 0px 1px;
   border: unset;
   outline: unset;
+}
+.reaction-notify__wrap.people {
+  grid-template-columns: 1fr;
 }
