--- a/client/src/App.css
+++ b/client/src/App.css
@@ -435,8 +435,36 @@ input[type="password"]:focus {
   padding: 30px;
   position: relative;
 }
+.more-action {
+  position: relative;
+}
+.share-post {
+  box-shadow: 3px 5px 1px 1px var(--dark-color);
+  border: 2px solid var(--dark-color);
+  background-color: var(--white-color);
+  border-radius: 5px;
+  padding: 8px;
+  width: 250px;
+  position: absolute;
+  bottom: -30px;
+  left: 60px;
+}
+.btn-share .btn {
+  margin-right: 0;
+  padding: 0.4rem;
+}
+.btn-share .btn-light {
+  background-color: unset;
+}
+.btn-share:hover .btn-light {
+  background-color: #f2f2f3;
+  color: var(--mainstream-color);
+}
+.backdrop .remove-comt {
+  min-height: 20%;
+  width: 400px;
+}
 .backdrop .tags-modal {
-  margin: 100px auto;
   min-height: 20%;
   width: 500px;
 }
@@ -446,7 +474,6 @@ input[type="password"]:focus {
   width: 500px;
 }
 .backdrop .edit-comment {
-  margin: 100px auto;
   min-height: 30%;
   width: 500px;
 }
@@ -457,7 +484,6 @@ input[type="password"]:focus {
   padding: 30px;
 }
 .backdrop .cover-image {
-  margin: 100px auto;
   min-height: 20%;
   width: 500px;
   padding: 30px;
