--- a/client/src/App.css
+++ b/client/src/App.css
@@ -424,7 +424,6 @@ input[type="password"]:focus {
   display: flex;
   flex-direction: column;
   width: 500px;
-  min-height: 30%;
   margin: 200px auto;
   box-shadow: 3px 5px 1px 1px var(--dark-color);
   border: 2px solid var(--dark-color);
@@ -461,30 +460,24 @@ input[type="password"]:focus {
   color: var(--mainstream-color);
 }
 .backdrop .remove-comt {
-  min-height: 20%;
   width: 400px;
 }
 .backdrop .tags-modal {
-  min-height: 20%;
   width: 500px;
 }
 .backdrop .guide-markdown {
   margin: 100px auto;
-  min-height: 60%;
   width: 500px;
 }
 .backdrop .edit-comment {
-  min-height: 30%;
   width: 500px;
 }
 .backdrop .add-image {
   margin: 100px auto;
-  min-height: 30%;
   width: 500px;
   padding: 30px;
 }
 .backdrop .cover-image {
-  min-height: 20%;
   width: 500px;
   padding: 30px;
 }
@@ -1089,6 +1082,8 @@ notfound {
   flex-direction: column;
   align-items: center;
   margin: 0 12px;
+  max-width: 220px;
+  word-break: break-word;
 }
 .me-work__item span {
   color: #64707d;
@@ -1359,7 +1354,7 @@ div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
 }
 .reaction-notify__wrap {
   display: grid;
-  grid-template-columns: 9rem 1fr;
+  grid-template-columns: 10rem 1fr;
 }
 .reaction-notify__user {
   display: flex;
